@@ -1,5 +1,10 @@
 2008-02-14  Mike Krüger <mkrueger@novell.com> 
 
+	* Mono.TextEditor/TextViewMargin.cs: Fixed highlighting bracket drawing
+	  issue.
+
+2008-02-14  Mike Krüger <mkrueger@novell.com> 
+
 	* Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/TextEditor.cs,
 	  Mono.TextEditor/Caret.cs: Fixed caret drawing error.
 
